--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,15 +3,16 @@ for details on configuring this project to bundle and minify static web assets. 
 
 /* Jumbotron styles */
 .jumbotron {
-    background-image: url(https://images.unsplash.com/photo-1552152974-19b9caf99137?fit=crop&w=1350&q=80);
+    background-image: url(https://d31nhj1t453igc.cloudfront.net/cloudinary/2022/Apr/09/l5pJ8l4hYByv1gAcmfAY.jpg);
     text-align: center;
-    background-blend-mode: color-burn;
-    position: center;
-    top: auto;
+    background-size:cover;
+    position: relative;
+    top: -15px;
+    padding-top: 100px;
 }
 
 .text-design {
-    color: darkslategray;
+    color: white;
     stroke-width: initial;
     font-size: larger;
     font: bold;
@@ -24,6 +25,83 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+/* Images */
+
+.column {
+    float: left;
+    width: 16%;
+    padding: 5px;
+    padding-left: 300px;
+    padding-right: 40px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+/* img 1 */
+.image1 {
+    position: relative;
+    width: 300px;
+}
+
+.image__img1{
+    display: block;
+    width: 100%;
+}
+
+/* img 2 */
+.image2 {
+    position: relative;
+    width: 300px;
+}
+
+.image__img2 {
+    display: block;
+    
+}
+
+/* img 3 */
+.image3 {
+    position: relative;
+    width: 300px;
+}
+
+.image__img3 {
+    display: block;
+}
+
+/* img 4 */
+.image4 {
+    position: relative;
+    width: 300px;
+}
+
+.image__img4 {
+    display: block;
+    width: 100%;
+}
+.image__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    color: white;
+    display: flex;
+    font-family: 'Century Gothic';
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    opacity:0;
+    transition: ease-in .5s;
+}
+.image__overlay:hover {
+    opacity:1;
+}
 /* Accordion/Collapse style */
 .panel-group .panel {
     border-radius: 0;
@@ -55,9 +133,10 @@ a.navbar-brand {
     color: #212121;
 }
 
-.panel-default > .panel-heading + .panel-collapse > .panel-body{
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
     border-top-color: #EEEEEE;
-    background-color: slategray;
+    background-image: url(https://d31nhj1t453igc.cloudfront.net/cloudinary/2022/Apr/09/l5pJ8l4hYByv1gAcmfAY.jpg);
+    background-size: cover;
 }
 /* Provide sufficient contrast against white background */
 a {
@@ -120,4 +199,9 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+hr {
+    color: white;
+    opacity:1;
 }
