--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head style="background-color: #1A1A1D">
+<head style="background-color: slategrey">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PortfolioWebsite</title>
@@ -21,9 +21,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +33,7 @@
 
     <footer class="border-top footer text-muted" style="background-color: #1A1A1D">
         <div class="container">
-            &copy; 2022 - PortflioWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - PortfolioWebsite
         </div>
     </footer>
 
