--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,7 +2,7 @@
 @model IndexModel
 
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home";
 }
 <div class="jumbotron jumbotron-fluid text-white">
         <h1 class="display-3 align-content-center">George Tackie</h1>
@@ -92,6 +92,41 @@
                                 </div>
                             </a>
                             </div>
+                        </div>
+                    </div>
+                    <div class="text-design">
+                        <h4>Click images for source code.</h4>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="Contact container">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="Contact">
+                <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                        <i class="more-less glyphicon glyphicon-plus"></i>
+                        Contact
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="contact">
+                 <div class="panel-body text-design" style="padding:20px;">
+                    <div class="row">
+                        <div class="col">
+                            <h4>EMAIL: tackie.george89@gmail.com</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4>HOME PHONE: +1 (845) 553 - 9284</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4>MOBILE PHONE: +1 (518) 466 - 9553</h4>
                         </div>
                     </div>
                 </div>
