fixing scroll issues

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -56,7 +56,7 @@
                         <div class="column">
                             <div class="image1">
                             <a href="https://github.com/Seagun89/Team19SKiaR12" target="_blank">
-                                <img class="image__img1" src="./images/SkiaSharp_Proj.png" style="width:300px"/>
+                                <img class="image__img1" src="./images/SkiaSharp_Proj.png" style="width:300px fit-content:auto"/>
                                 <div class="image__overlay">
                                     @Model.getSDA()
                                 </div>
@@ -66,7 +66,7 @@
                         <div class="column">
                             <div class="image2">
                             <a href="https://github.com/Seagun89/Itiner-Buddy-Bot" target="_blank">
-                                <img class="image__img2" src="./images/discord-mascot.png" style="width:300px" />
+                                <img class="image__img2" src="./images/discord-mascot.png" style="width:300px fit-content:auto" />
                                 <div class="image__overlay">
                                     @Model.getIBB()
                                 </div>
@@ -76,7 +76,7 @@
                         <div class="column">
                             <div class="image3">
                             <a href="https://github.com/Seagun89/Software-comp-build" target="_blank">
-                                <img class="image__img3" src="./images/computer_img.png" style="width:300px"/>
+                                <img class="image__img3" src="./images/computer_img.png" style="width:300px fit-content:auto"/>
                                 <div class="image__overlay">
                                     @Model.getSCHI()
                                 </div>
@@ -86,7 +86,7 @@
                         <div class="column">
                             <div class="image4">
                             <a href="https://github.com/Seagun89/tic-tac-toe-project" target="_blank">
-                                <img class="image__img4" src="./images/tictactoe_img.png" style="width:300px"/>
+                                <img class="image__img4" src="./images/tictactoe_img.png" style="width:300px fit-content:auto"/>
                                 <div class="image__overlay">
                                   @Model.getTTT()
                                 </div>
